deploy.yml
apiVersion: extensions/v1beta1 
kind: Deployment 
metadata: 
  labels: 
    run: tomcatserv
  name: tomcatserv
  namespace: default 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      run: tomcatserv
  strategy: 
    rollingUpdate: 
      maxSurge: 1 
      maxUnavailable: 1 
    type: RollingUpdate 
  template: 
    metadata: 
      labels: 
        run: tomcatserv
    spec: 
      containers: 
      - image: tomcat 
        imagePullPolicy: Always 
        name: tomcat
