ingress.yml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  name: tomcatdeploying 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  rules: 
  - http: 
      paths: 
      - path: /tomtesting 
        backend: 
          serviceName: tomcatserv 
          servicePort: 8080
